--- a/src/assets/style/common.css
+++ b/src/assets/style/common.css
@@ -10,3 +10,10 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, form, input, p, table
     margin: 0;
     list-style: none;
 }
+
+h4{
+    font-weight: 100;
+    letter-spacing: 3px;
+    font-size: 38px;
+    margin-bottom: 100px;
+}
